src/test/deca/context/valid/class/object/object.deca
// Test de la classe objet
//
// Resultats:
//    ok

class A{

}

{
    Object a = new Object();
    Object d = a;
    boolean b = a.equals(d);
}
