src/test/deca/context/invalid/bad_cast.deca
// Description:
//    Déclaration de variable
//
// Resultats:
//    Ligne 13 : cast impossible
// 

{
   int a;
   boolean b;
   b = (int) a;

}
